tercera pre entrega del proyecto final

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="tienda, dietetica, nutricion">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Edu+VIC+WA+NT+Beginner:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="shortcut icon" type="image/x-icon" href="./img/Logo-Nutrian.png">
     <link rel="stylesheet" href="./css/style.css">
     <title>Tienda Dietetica NutriAn</title>
@@ -16,7 +17,9 @@
     <!-- Encabezado y logo-->
     <header class="headerIndex">
 
-        <img class="logoPrincipal" src="./img/Logo-Nutrian.png" alt="Logo de la empresa">
+        <div class="animate__animated animate__rubberBand">
+            <img class="logoPrincipal" src="./img/Logo-Nutrian.png" alt="Logo de la empresa">
+        </div>
 
     <!--Menu de navegacion y carrusel-->
         <div class="menuNav">
@@ -33,13 +36,13 @@
             <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./img/background.image/Foto-dietéticas.jpg" class="d-block w-100 img-carousel" alt="foto dietetica">
+                        <img src="./img/background.image/n.break-carrousel2.jpg" class="d-block w-100" alt="cartel promocional billetera santa fe">
                     </div>
                     <div class="carousel-item">
-                        <img src="./img/billetera.santafe.png" class="d-block w-100 img-carousel" alt="cartel promocional billetera santa fe">
+                        <img src="./img/background.image/billetera.santafe.jpg" class="d-block w-100" alt="paquete de frutos secos">
                     </div>
                     <div class="carousel-item">
-                        <img src="./img/3-slider-carousel.jpg" class="d-block w-100 img-carousel" alt="logo empresa">
+                        <img src="./img/background.image/Foto-dietéticas.jpg" class="d-block w-100" alt="productos en gongola">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -56,29 +59,29 @@
     </header>
 
     <main class="mainHome">
-        <!--cuerpo de la pagina. Exposicion de algunos productos-->
 
+        <!--cuerpo de la pagina. Exposicion de algunos productos-->
         <div class="h1Inicio">
             <h1 class="estiloH1Inicio"> PRODUCTOS DESTACADOS</h1>
         </div>
 
         <div class="imgIndex1 animacionCard">
-            <img src="./img/producto1.Almendra.jpg" alt="tason de almendras">
+            <img src="./img/productos/almendra-pd.1.jpg" alt="tason de almendras">
             <h3 class="h3Index"> Almendras 1kg</h3>
             <p> $800,00</p>
         </div>
         <div class="imgIndex2 animacionCard">
-            <img src="./img/Producto3.vegetalex.jpg" alt="vegetalex">
-            <h3 class="h3Index"> Vegetalex 4U.</h3>
+            <img src="./img/productos/noquis-papa.jpg" alt="paquete de vegetalex">
+            <h3 class="h3Index">Vegetalex 500gr</h3>
             <p> $220,00</p>
         </div>
         <div class="imgIndex3 animacionCard">
-            <img src="./img/producto2.barra-cereal.jpg" alt="Barritas de cereales">
+            <img src="./img/productos/barracereal-pd.3.jpg" alt="Barritas de cereales">
             <h3 class="h3Index"> Barra de Cereal</h3>
             <p> $130,00</p>
         </div>
         <div class="imgIndex4 animacionCard">
-            <img src="./img/productos/Miel.jpeg" alt="tarro de miel">
+            <img src="./img/productos/Miel-pd.4.jpg" alt="tarro de miel">
             <h3 class="h3Index"> Miel 500gr</h3>
             <p> $280</p>
         </div>
