--- a/pages/productos.html
+++ b/pages/productos.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="productos, venta, nutricion, tienda">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Edu+VIC+WA+NT+Beginner:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="shortcut icon" href="../img/Logo-Nutrian.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
     <title>Productos de la Tienda</title>
@@ -18,7 +19,7 @@
         <!--Menu de navegacion para poder moverme a las demas paginas-->
 
         <nav class="navbar navbar-dark bg-dark fixed-top row navProductos">
-            <div class="container-fluid ">
+            <div class="container-fluid col-12">
                 <a class="navbar-brand" href="#">PRODUCTOS</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
                     <span class="navbar-toggler-icon"></span>
@@ -61,8 +62,8 @@
 
         <!--titulo principal-->
 
-        <div class="row cabeceraProductos">
-            <h1 class="h1Productos col-12"> NUESTROS PRODUCTOS</h1>
+        <div class="row cabeceraProductos animate__animated animate__fadeInDown">
+            <h1 class="h1Productos col-12 animate__animated animate__fadeInUp"> NUESTROS PRODUCTOS</h1>
         </div>
 
         <!--lista de productos dividos en secciones-->
@@ -130,7 +131,7 @@
                             </div>
                         </div>
                         <div class="card col-3 tarjeta" style="width: 10rem;">
-                            <img src="../img/productos/Miel.jpeg" class="card-img-top" alt="Miel">
+                            <img src="../img/productos/Miel-pd.4.jpg" class="card-img-top" alt="Miel">
                             <div class="card-body">
                                 <h3 class="card-title"> Miel pura 500gr</h3>
                                 <p class="card-text"> $200,00</p>
