--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="contacto, mensaje">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Edu+VIC+WA+NT+Beginner:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="shortcut icon" href="../img/Logo-Nutrian.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
     <title>Contacto</title>
@@ -63,7 +64,7 @@
 
         <!--Formulario de contacto-->
         
-        <form class="formulario">
+        <form class="formulario animate__animated animate__fadeInRight">
             <fieldset>
                 <legend> CONTACTO</legend>
                 <div class="form">
