--- a/pages/la-tienda.html
+++ b/pages/la-tienda.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Edu+VIC+WA+NT+Beginner:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Satisfy&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="shortcut icon" href="../img/Logo-Nutrian.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
     <title>Informacion La Tienda</title>
@@ -57,12 +58,16 @@
             </div>
         </nav> 
 
-        <div class="h1Tienda">
-            <h1> NUESTRA TIENDA</h1>
+        <div class="h1Tienda animate__animated animate__fadeInDown">
+            <h1 class="animate__animated animate__fadeInUp"> NUESTRA TIENDA</h1>
         </div>
 
     </header>
     <main class="mainLaTienda">
+
+        <div class="portada animate__animated animate__fadeInUp">
+            <img src="../img/background.image/nuestra.tienda.jpg" alt="foto de un cliente siendo atendido en una dietetica">
+        </div>
 
         <div class="ubicacion">
             <img src="../img/ubicacion.jpg" alt="logo de ubicacion">
@@ -70,7 +75,7 @@
         </div>
 
         <div class="mainLaTienda1">
-            <img class="mapa" src="../img/Tienda.Ubicacion.PNG" alt="mapa de ubicacion">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1994.689503460738!2d-60.79143173578377!3d-32.77490082377674!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1662000104316!5m2!1ses-419!2sar" class="mapa" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
         <div class="mainLaTienda2">
