--- a/pages/mas.html
+++ b/pages/mas.html
@@ -7,14 +7,14 @@
     <meta name="description" content="informacion,tips y curiosidades del mundo de la nutricion">
     <meta name="keywords" content="informacion, nutricion, datos">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Edu+VIC+WA+NT+Beginner:wght@500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Edu+VIC+WA+NT+Beginner:wght@500&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="../img/Logo-Nutrian.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
     <title>Nutricion - Tip</title>
 </head>
 <body>
-
     <header class="container-fluid headerMas">
 
         <!--Menu de navegacion para poder moverme a las demas paginas-->
@@ -61,33 +61,37 @@
             </div>
         </nav> 
 
-        <h1 class="h1Mas"> Tip de la semana!</h1>
+        <div class="encabezado">
+            <h1 class="h1Mas"> Tip de la semana!</h1>
+        </div>
 
     </header>
     <main class="mainMas">
 
         <!-- info/Noticia sobre nutricion a actualizar de manera semanal-->
 
-        <div class="estiloTip">
-            <h2> CAFE VERDE.. ¿Lo Sabias?</h2>
-        </div>
-
         <div class="imgMas">
             <img src="../img/cafe-verde.png" alt="granos de cafe verde">
         </div>
 
-        <div class="listaTip">
-            <ul> 7 Beneficios del café verde:
-                <li> Promueve la pérdida de peso</li>
-                <li> Previene el envejecimiento prematuro y las enfermedades</li>
-                <li> Elimina la celulitis</li>
-                <li> Aumenta la energía y la concentración</li>
-                <li> Reduce la presión arterial</li>
-                <li> Equilibra la glucosa en sangre</li>
-                <li> Favorece la diuresis y desintoxica el organismo</li>
-            </ul>
-        </div>
+        <div class="textoTip">
 
+            <div class="estiloTip">
+                <h2> CAFE VERDE.. ¿Lo Sabias?</h2>
+            </div>
+            <div class="listaTip">
+                <ul> 7 Beneficios del café verde:
+                    <li> Promueve la pérdida de peso</li>
+                    <li> Previene el envejecimiento prematuro y las enfermedades</li>
+                    <li> Elimina la celulitis</li>
+                    <li> Aumenta la energía y la concentración</li>
+                    <li> Reduce la presión arterial</li>
+                    <li> Equilibra la glucosa en sangre</li>
+                    <li> Favorece la diuresis y desintoxica el organismo</li>
+                </ul>
+            </div>
+            
+        </div>
     </main>
     <footer class="footerStyle">
 
