creacion de la pagina anteriores

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="tienda, dietetica, nutricion">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Edu+VIC+WA+NT+Beginner:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Combo&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="shortcut icon" type="image/x-icon" href="./img/Logo-Nutrian.png">
     <link rel="stylesheet" href="./css/style.css">
@@ -68,23 +69,27 @@
         <div class="imgIndex1 animacionCard">
             <img src="./img/productos/almendra-pd.1.jpg" alt="tason de almendras">
             <h3 class="h3Index"> Almendras 1kg</h3>
-            <p> $800,00</p>
+            <p><del>$1000,00</del> $800,00</p>
         </div>
         <div class="imgIndex2 animacionCard">
             <img src="./img/productos/noquis-papa.jpg" alt="paquete de vegetalex">
-            <h3 class="h3Index">Vegetalex 500gr</h3>
-            <p> $220,00</p>
+            <h3 class="h3Index">Ñoquis de papa</h3>
+            <p><del>$300,00</del> $220,00</p>
         </div>
         <div class="imgIndex3 animacionCard">
             <img src="./img/productos/barracereal-pd.3.jpg" alt="Barritas de cereales">
             <h3 class="h3Index"> Barra de Cereal</h3>
-            <p> $130,00</p>
+            <p><del>$170,00</del> $130,00</p>
         </div>
         <div class="imgIndex4 animacionCard">
             <img src="./img/productos/Miel-pd.4.jpg" alt="tarro de miel">
             <h3 class="h3Index"> Miel 500gr</h3>
-            <p> $280</p>
+            <p><del>$350,00</del> $280</p>
         </div>
+
+        <button class="botonProductosIndex"> 
+            <a href="./pages/productos.html"> TODOS LOS PRODUCTOS</a>
+        </button>
 
     </main>
 
@@ -103,11 +108,11 @@
             <h2 class="h2Posicion"> SEGUINOS</h2>
             <div class="logoRedes">
                 <img class="logoI" src="./img/footer-Instagram-Logo.png" alt="logo de instagram">
-                <p class="logoStyle"> @TiendaNutriAn</p>
+                <a href="https://www.instagram.com/" target="_blank"><p class="logoStyle"> @TiendaNutriAn</p></a>
             </div>
             <div class="logoRedes">
             <img class="logoF" src="./img/footer-logo.Face.webp" alt="logo de facebook">
-            <p class="logoStyle"> / NutriAn dietetica</p>
+            <a href="https://www.facebook.com/profile.php?id=100054304490210" target="_blank"><p class="logoStyle"> / NutriAn dietetica</p></a>
             </div>
         </div>
 
