--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -48,7 +48,7 @@
                                 <ul class="dropdown-menu dropdown-menu-dark">
                                     <li><a class="dropdown-item" href="./mas.html">Tip de la semana</a></li>
                                     <li><hr class="dropdown-divider"></li>
-                                    <li><a class="dropdown-item" href="#">Anteriores</a></li>
+                                    <li><a class="dropdown-item" href="./anteriores.html">Anteriores</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -107,11 +107,11 @@
             <h2 class="h2Posicion"> SEGUINOS</h2>
             <div class="logoRedes">
                 <img class="logoI" src="../img/footer-Instagram-Logo.png" alt="logo de instagram">
-                <p class="logoStyle"> @TiendaNutriAn</p>
+                <a href="https://www.instagram.com/" target="_blank"><p class="logoStyle"> @TiendaNutriAn</p></a>
             </div>
             <div class="logoRedes">
             <img class="logoF" src="../img/footer-logo.Face.webp" alt="logo de facebook">
-            <p class="logoStyle"> / NutriAn dietetica</p>
+            <a href="https://www.facebook.com/profile.php?id=100054304490210" target="_blank"><p class="logoStyle"> / NutriAn dietetica</p></a>
             </div>
         </div>
 
