--- a/pages/productos.html
+++ b/pages/productos.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="productos, venta, nutricion, tienda">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Edu+VIC+WA+NT+Beginner:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="shortcut icon" href="../img/Logo-Nutrian.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
@@ -48,7 +49,7 @@
                                 <ul class="dropdown-menu dropdown-menu-dark">
                                     <li><a class="dropdown-item" href="./mas.html">Tip de la semana</a></li>
                                     <li><hr class="dropdown-divider"></li>
-                                    <li><a class="dropdown-item" href="#">Anteriores</a></li>
+                                    <li><a class="dropdown-item" href="./anteriores.html">Anteriores</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -93,7 +94,7 @@
                         <div class="card col-3 tarjeta" style="width: 10rem;">
                             <img src="../img/productos/Granola.jpeg" class="card-img-top" alt="Granola">
                             <div class="card-body">
-                                <h3 class="card-title">Granola</h3>
+                                <h3 class="card-title">Granola 500gr</h3>
                                 <p class="card-text">$250,00</p>
                             </div>
                         </div>
@@ -109,6 +110,34 @@
                             <div class="card-body">
                                 <h3 class="card-title">Semillas de sesamo</h3>
                                 <p class="card-text">$270,00</p>
+                            </div>
+                        </div>
+                        <div class="card col-3 tarjeta" style="width: 10rem;">
+                            <img src="../img/productos/almendra-pd.1.jpg" class="card-img-top"  alt="tason de almendras">
+                            <div class="card-body">
+                                <h3 class="card-title">Almendras 1 kg</h3>
+                                <p class="card-text"><del>$1000,00</del>$800,00</p>
+                            </div>
+                        </div>
+                        <div class="card col-3 tarjeta" style="width: 10rem;">
+                            <img src="../img/productos/Cereal-Almohaditas.jpeg" class="card-img-top" alt="almohaditas rellenas">
+                            <div class="card-body">
+                                <h3 class="card-title">Almohadita 500gr</h3>
+                                <p class="card-text">$350,00</p>
+                            </div>
+                        </div>
+                        <div class="card col-3 tarjeta" style="width: 10rem;">
+                            <img src="../img/productos/MixFrutosSecos.jpeg" class="card-img-top" alt="frutos secos">
+                            <div class="card-body">
+                                <h3 class="card-title">Frutos Secos 1kg</h3>
+                                <p class="card-text">$760,00</p>
+                            </div>
+                        </div>
+                        <div class="card col-3 tarjeta" style="width: 10rem;">
+                            <img src="../img/productos/barracereal-pd.3.jpg" class="card-img-top" alt="barras de cereal">
+                            <div class="card-body">
+                                <h3 class="card-title">Barra de Cereal</h3>
+                                <p class="card-text"><del>$170,00</del>$130,00</p>
                             </div>
                         </div>
                     </section>
@@ -134,7 +163,7 @@
                             <img src="../img/productos/Miel-pd.4.jpg" class="card-img-top" alt="Miel">
                             <div class="card-body">
                                 <h3 class="card-title"> Miel pura 500gr</h3>
-                                <p class="card-text"> $200,00</p>
+                                <p class="card-text"><del>$350,00</del> $280,00</p>
                             </div>
                         </div>
                         <div class="card col-3 tarjeta" style="width: 10rem;">
@@ -142,6 +171,34 @@
                             <div class="card-body">
                                 <h3 class="card-title"> Pasta de Mani natural</h3>
                                 <p class="card-text"> $360,00</p>
+                            </div>
+                        </div>
+                        <div class="card col-3 tarjeta" style="width: 10rem;">
+                            <img src="../img/productos/azucar-mascabo.jpeg" class="card-img-top" alt="azucar marron suelta">
+                            <div class="card-body">
+                                <h3 class="card-title"> Azucar mascabo</h3>
+                                <p class="card-text"> $300,00</p>
+                            </div>
+                        </div>
+                        <div class="card col-3 tarjeta" style="width: 10rem;">
+                            <img src="../img/productos/azucar-rubia.jpeg" class="card-img-top" alt="tason de azucar rubia">
+                            <div class="card-body">
+                                <h3 class="card-title"> Azucar rubia</h3>
+                                <p class="card-text"> $450,00</p>
+                            </div>
+                        </div>
+                        <div class="card col-3 tarjeta" style="width: 10rem;">
+                            <img src="../img/productos/hileret-sobres.jpeg" class="card-img-top" alt="caja de edulcorante">
+                            <div class="card-body">
+                                <h3 class="card-title"> Hileret sobres</h3>
+                                <p class="card-text"> $260,00</p>
+                            </div>
+                        </div>
+                        <div class="card col-3 tarjeta" style="width: 10rem;">
+                            <img src="../img/productos/stevia-liquido.jpeg" class="card-img-top" alt="tarro de edulcorante liquido">
+                            <div class="card-body">
+                                <h3 class="card-title"> Hileret liquido</h3>
+                                <p class="card-text"> $320,00</p>
                             </div>
                         </div>
                     </section>
@@ -159,7 +216,7 @@
                         <div class="card col-3 tarjeta" style="width: 10rem;">
                             <img src="../img/productos/Te-Negro.png" class="card-img-top" alt="Te">
                             <div>
-                                <h3 class="card-title"> Te Negro</h3>
+                                <h3 class="card-title"> Te Negro 300gr</h3>
                                 <p class="card-text"> $300,00</p>
                             </div>
                         </div>
@@ -175,6 +232,34 @@
                             <div>
                                 <h3 class="card-title"> Yerba organica 500gr</h3>
                                 <p class="card-text"> $530,00</p>
+                            </div>
+                        </div>
+                        <div class="card col-3 tarjeta" style="width: 10rem;">
+                            <img src="../img/productos/yerba-hierbas.jpeg" class="card-img-top" alt="Paquete de yerba">
+                            <div>
+                                <h3 class="card-title"> Yerba con Hierbas</h3>
+                                <p class="card-text"> $369,00</p>
+                            </div>
+                        </div>
+                        <div class="card col-3 tarjeta" style="width: 10rem;">
+                            <img src="../img/productos/yerba-naranja.jpeg" class="card-img-top" alt="Paquete de yerba">
+                            <div>
+                                <h3 class="card-title"> Yerba con Naranja</h3>
+                                <p class="card-text"> $369,00</p>
+                            </div>
+                        </div>
+                        <div class="card col-3 tarjeta" style="width: 10rem;">
+                            <img src="../img/productos/cacao.jpeg" class="card-img-top" alt="Cacao suelto">
+                            <div>
+                                <h3 class="card-title"> Cacao en polvo 500gr</h3>
+                                <p class="card-text"> $900,00</p>
+                            </div>
+                        </div>
+                        <div class="card col-3 tarjeta" style="width: 10rem;">
+                            <img src="../img/productos/boldo.jpeg" class="card-img-top" alt="caja de te de boldo">
+                            <div>
+                                <h3 class="card-title">Te Boldo en caja</h3>
+                                <p class="card-text"> $380,00</p>
                             </div>
                         </div>
                     </section>
@@ -199,15 +284,43 @@
                         <div class="card col-3 tarjeta" style="width: 10rem;">
                             <img src="../img/productos/queso.cremoso.jpg" class="card-img-top" alt="queso cremoso envasado">
                             <div>
-                                <h3 class="card-title"> Queso cremoso 100gr</h3>
+                                <h3 class="card-title"> Queso Tybo 100gr</h3>
                                 <p class="card-text"> $90,00</p>
                             </div>
                         </div>
                         <div class="card col-3 tarjeta" style="width: 10rem;">
                             <img src="../img/productos/Yogur-bebible-light-frutilla.jpg" class="card-img-top" alt="Sachet de yogurt bebible">
                             <div>
-                                <h3 class="card-title"> Yogurt Bebible</h3>
+                                <h3 class="card-title"> Yogurt Bebible frutilla</h3>
                                 <p class="card-text"> $300,00</p>
+                            </div>
+                        </div>
+                        <div class="card col-3 tarjeta" style="width: 10rem;">
+                            <img src="../img/productos/noquis-papa.jpg" class="card-img-top" alt="Paquete de ñoquis">
+                            <div>
+                                <h3 class="card-title"> Ñoquis de papa</h3>
+                                <p class="card-text"><del>$300</del> $220,00</p>
+                            </div>
+                        </div>
+                        <div class="card col-3 tarjeta" style="width: 10rem;">
+                            <img src="../img/productos/vegetalex-pd.2.jpg" class="card-img-top" alt="caja de vegetalex">
+                            <div>
+                                <h3 class="card-title"> Vegetalex caja 4u.</h3>
+                                <p class="card-text"> $240,00</p>
+                            </div>
+                        </div>
+                        <div class="card col-3 tarjeta" style="width: 10rem;">
+                            <img src="../img/productos/yogurt.jpeg" class="card-img-top" alt="tarro de yogurt">
+                            <div>
+                                <h3 class="card-title"> Yogurt con cereales</h3>
+                                <p class="card-text"> $230,00</p>
+                            </div>
+                        </div>
+                        <div class="card col-3 tarjeta" style="width: 10rem;">
+                            <img src="../img/productos/queso-chedar.jpeg" class="card-img-top" alt="paquete de queso cheddar">
+                            <div>
+                                <h3 class="card-title"> Queso Cheddar</h3>
+                                <p class="card-text"> $460,00</p>
                             </div>
                         </div>
                     </section> 
@@ -232,11 +345,11 @@
             <h2 class="h2Posicion"> SEGUINOS</h2>
             <div class="logoRedes">
                 <img class="logoI" src="../img/footer-Instagram-Logo.png" alt="logo de instagram">
-                <p class="logoStyle"> @TiendaNutriAn</p>
+                <a href="https://www.instagram.com/" target="_blank"><p class="logoStyle"> @TiendaNutriAn</p></a>
             </div>
             <div class="logoRedes">
             <img class="logoF" src="../img/footer-logo.Face.webp" alt="logo de facebook">
-            <p class="logoStyle"> / NutriAn dietetica</p>
+            <a href="https://www.facebook.com/profile.php?id=100054304490210" target="_blank"><p class="logoStyle"> / NutriAn dietetica</p></a>
             </div>
         </div>
 
