entrega final del proyecto

--- a/pages/mas.html
+++ b/pages/mas.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Edu+VIC+WA+NT+Beginner:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ms+Madi&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="shortcut icon" href="../img/Logo-Nutrian.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
@@ -80,28 +81,26 @@
             </button>
         </div>
 
+        <div class="estiloTip animate__animated animate__zoomIn">
+            <h2> CAFE VERDE.. ¿Lo Sabias?</h2>
+        </div>
+
         <div class="imgMas animate__animated animate__fadeInLeft">
             <img src="../img/cafe-verde.png" alt="granos de cafe verde">
         </div>
 
-        <div class="textoTip">
-
-            <div class="estiloTip animate__animated animate__zoomIn">
-                <h2> CAFE VERDE.. ¿Lo Sabias?</h2>
-            </div>
-            <div class="listaTip animate__animated animate__fadeInUp">
-                <ul> 7 Beneficios del café verde:
-                    <li> Promueve la pérdida de peso</li>
-                    <li> Previene el envejecimiento prematuro y las enfermedades</li>
-                    <li> Elimina la celulitis</li>
-                    <li> Aumenta la energía y la concentración</li>
-                    <li> Reduce la presión arterial</li>
-                    <li> Equilibra la glucosa en sangre</li>
-                    <li> Favorece la diuresis y desintoxica el organismo</li>
-                </ul>
-            </div>
-            
+        <div class="listaTip animate__animated animate__fadeInUp">
+            <ul><span>7</span> BENEFICIOS DEL CAFE VERDE:
+                <li> Promueve la pérdida de peso</li>
+                <li> Previene el envejecimiento prematuro y las enfermedades</li>
+                <li> Elimina la celulitis</li>
+                <li> Aumenta la energía y la concentración</li>
+                <li> Reduce la presión arterial</li>
+                <li> Equilibra la glucosa en sangre</li>
+                <li> Favorece la diuresis y desintoxica el organismo</li>
+            </ul>
         </div>
+            
     </main>
     <footer class="footerStyle">
 
