--- a/pages/anteriores.html
+++ b/pages/anteriores.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Combo&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ms+Madi&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Edu+VIC+WA+NT+Beginner:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
@@ -61,6 +62,10 @@
             </div>
         </nav>
 
+        <div class="buttonTop" id="seccion1">
+            <a href="#seccion1">TODOS LOS TIPS</a>
+        </div>
+
         <div class="h1Tips">
             <h1>Nutri-tips</h1>
         </div>
@@ -70,7 +75,7 @@
 
         <section class="seccion-1">
             <div class="principal">
-                <P>TODOS NUESTROS TIPS</P>
+                <p>TODOS NUESTROS TIPS</p>
             </div>
             <div class="tipUltimo">
                 <a href="./mas.html">Ultimo Tip</a>
@@ -135,15 +140,59 @@
 
         </section>
 
-        <section class="seccion-4" id="seccion4"></section>
-        <section class="seccion-5" id="seccion5"></section>
+        <section class="seccion-4" id="seccion4">
+            <div class="tituloS4">
+                <h2>
+                    <span>12</span>
+                    LOS BENEFICIOS DE LA CURCUMA
+                </h2>
+            </div>
+            <div class="textoS4">
+                <ol>
+                    <li>Combate la inflamacion en todo el cuerpo, aliviando el dolor.</li>
+                    <li>Mejora la circulacion y previene arterioesclerosis.</li>
+                    <li>Favorece el buen funcinamiento del higado.</li>
+                    <li>Disminuye el colesterol.</li>
+                    <li>Ayuda a reducir los niveles de glucosa.</li>
+                    <li>Favorece la eliminacion de toxinas.</li>
+                    <li>Ayuda a la sensibilidad en encias.</li>
+                    <li>Buena para la memoria.</li>
+                    <li>Evita el envejecimiento de las celulas del cerebro.</li>
+                    <li>Ayuda a eliminar el exceso de mucosidad.</li>
+                    <li>Mantiene un sistema digestivo saludable.</li>
+                    <li>Facilita la perdida de peso.</li>
+                </ol>
+            </div>
+            <div class="imgS4">
+                <img src="../img/background.image/curcuma.png" alt="curcuma molida en tazon y entera">
+            </div>
+        </section>
 
-        
+        <section class="seccion-5" id="seccion5">
+            <div class="tituloS5">
+                <p>EL BENEFICIO DE LAS</p>
+                <H2>ALMENDRAS</H2>
+            </div>
+
+            <div class="atributo1"><p>MEJORA LA MEMORIA</p></div>
+            <div class="atributo2"><p>PROTEGE TU CORAZON</p></div>
+            <div class="atributo3"><p>CONTIENE GRASAS SALUDABLES</p></div>
+            <div class="atributo4"><p>REDUCE EL COLESTEROL</p></div>
+            <div class="atributo5"><p>FUENTE DE VITAMINAS</p></div>
+            <div class="atributo6"><p>ANTI-CANCERIGENO</p></div>
+            <div class="atributo7"><p>MEJORA LA CIRCULACION</p></div>
+            <div class="atributo8"><p>ANTIOXIDANTE</p></div>
+
+            <div class="imgS5">
+                <img src="../img/background.image/almendras-seccion5.png" alt="almendras sueltas">
+            </div>
+        </section>
 
     </main>
 
-    <footer>
-
+    <footer class="footerAnteriores">
+        <p>© Todos los derechos reservados</p>
+        <p>Fuente: Todos los informes son de elaboración y diseño propio con base en la recopilación de información.</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>   
